--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   motor_flutter: ^0.9.1
   get_storage: ^2.0.3
   splashscreen: ^1.3.5
+  flutter_svg: ^1.1.5
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +60,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+      - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
